--- a/index.html
+++ b/index.html
@@ -5,140 +5,134 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>运维保障中心值班表</title>
   <style>
-    :root {
-      --primary: #2563eb;       /* 主蓝 */
-      --primary-dark: #1e40af;
-      --bg: #f8fafc;
-      --card-bg: #ffffff;
-      --text: #0f172a;
-      --text-secondary: #475569;
-      --border: #e2e8f0;
-      --hover: #eff6ff;
-    }
-
-    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
+      margin: 0;
+      padding: 0;
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.5;
+      background: linear-gradient(to bottom, #f1f5f9 0%, #e2e8f0 100%);
       min-height: 100vh;
-      padding: 24px 16px;
+      color: #1e293b;
     }
 
     .container {
-      max-width: 960px;
+      max-width: 1000px;
       margin: 0 auto;
+      padding: 40px 20px 60px;
     }
 
     header {
       text-align: center;
-      margin-bottom: 32px;
+      margin-bottom: 48px;
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 2.1rem;
       font-weight: 700;
-      color: var(--text);
-      margin-bottom: 8px;
+      margin: 0 0 8px;
+      color: #0f172a;
     }
 
-    .update-time {
-      font-size: 1rem;
-      color: var(--text-secondary);
+    .update {
+      font-size: 1.05rem;
+      color: #64748b;
     }
 
-    .groups {
+    .duty-grid {
       display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(460px, 1fr));
       gap: 24px;
     }
 
-    .group-card {
-      background: var(--card-bg);
+    .duty-card {
+      background: white;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
       overflow: hidden;
-      transition: transform 0.1s ease, box-shadow 0.1s ease;
+      transition: all 0.15s ease;
     }
 
-    .group-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    .duty-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 28px rgba(0,0,0,0.12);
     }
 
-    .group-header {
-      background: var(--primary);
+    .card-header {
+      background: #3b82f6;
       color: white;
       padding: 14px 20px;
       font-size: 1.25rem;
       font-weight: 600;
     }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
+    .duty-content {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
 
-    th, td {
-      padding: 14px 20px;
-      text-align: left;
+    .duty-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 24px;
+      align-items: stretch;
     }
 
-    th {
-      background: #f1f5f9;
-      color: #334155;
-      font-weight: 600;
-      font-size: 0.95rem;
-      border-bottom: 2px solid var(--border);
+    .person {
+      flex: 1;
+      min-width: 200px;
+      padding: 16px;
+      background: #f8fafc;
+      border-radius: 8px;
+      border: 1px solid #e2e8f0;
     }
 
-    td {
-      border-bottom: 1px solid var(--border);
-      font-size: 1rem;
-    }
-
-    tr:last-child td {
-      border-bottom: none;
+    .person.primary {
+      border-color: #3b82f6;
+      background: #eff6ff;
     }
 
     .role {
-      width: 120px;
-      color: var(--text-secondary);
-      font-weight: 500;
+      font-size: 0.95rem;
+      font-weight: 600;
+      color: #475569;
+      margin-bottom: 6px;
     }
 
     .name {
-      font-weight: 600;
-      color: var(--text);
+      font-size: 1.15rem;
+      font-weight: 700;
+      color: #0f172a;
+      margin-bottom: 4px;
     }
 
     .phone {
+      font-size: 1.1rem;
       font-family: monospace;
-      color: var(--primary-dark);
-      font-weight: 500;
+      color: #1e40af;
+      letter-spacing: 0.5px;
     }
 
-    tr:hover {
-      background: var(--hover);
-    }
-
-    @media (max-width: 640px) {
-      body { padding: 16px 12px; }
-      h1 { font-size: 1.75rem; }
-      .group-header { font-size: 1.125rem; padding: 12px 16px; }
-      th, td { padding: 12px 16px; font-size: 0.95rem; }
-      .role { width: 100px; }
+    @media (max-width: 680px) {
+      .duty-grid {
+        grid-template-columns: 1fr;
+      }
+      .duty-row {
+        flex-direction: column;
+        gap: 16px;
+      }
     }
   </style>
 </head>
 <body>
+
   <div class="container">
     <header>
       <h1>运维保障中心每日值班人员</h1>
-      <div class="update-time">最后更新：<span id="update-time"></span></div>
+      <div class="update">最后更新：<span id="update-time"></span></div>
     </header>
 
-    <div class="groups" id="groups"></div>
+    <div class="duty-grid" id="groups"></div>
   </div>
 
   <script>
@@ -148,33 +142,28 @@
         document.getElementById('update-time').textContent = data.updateTime;
 
         const container = document.getElementById('groups');
+
         data.groups.forEach(group => {
           const card = document.createElement('div');
-          card.className = 'group-card';
+          card.className = 'duty-card';
 
           card.innerHTML = `
-            <div class="group-header">${group.name} 值班人员</div>
-            <table>
-              <thead>
-                <tr>
-                  <th class="role">角色</th>
-                  <th>姓名</th>
-                  <th>联系电话</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="role">主值班</td>
-                  <td class="name">${group.primary.name}</td>
-                  <td class="phone">${group.primary.phone}</td>
-                </tr>
-                <tr>
-                  <td class="role">辅值班</td>
-                  <td class="name">${group.secondary.name}</td>
-                  <td class="phone">${group.secondary.phone}</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="card-header">${group.name} 值班人员</div>
+            <div class="duty-content">
+              <div class="duty-row">
+                <div class="person primary">
+                  <div class="role">主值班</div>
+                  <div class="name">${group.primary.name}</div>
+                  <div class="phone">${group.primary.phone}</div>
+                </div>
+
+                <div class="person">
+                  <div class="role">辅值班</div>
+                  <div class="name">${group.secondary.name}</div>
+                  <div class="phone">${group.secondary.phone}</div>
+                </div>
+              </div>
+            </div>
           `;
 
           container.appendChild(card);
@@ -183,8 +172,9 @@
       .catch(err => {
         console.error(err);
         document.getElementById('groups').innerHTML = 
-          '<p style="text-align:center; color:#ef4444; padding:2rem;">数据加载失败，请检查 data.json</p>';
+          '<p style="text-align:center; color:#dc2626; font-size:1.2rem; padding:40px;">数据加载失败，请检查 data.json 文件</p>';
       });
   </script>
+
 </body>
 </html>
