--- a/index.html
+++ b/index.html
@@ -3,124 +3,125 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>运维保障中心值班表</title>
+  <title>运维保障中心每日值班表</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background: linear-gradient(to bottom, #f1f5f9 0%, #e2e8f0 100%);
+      font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+      color: #e2e8f0;
       min-height: 100vh;
-      color: #1e293b;
     }
 
     .container {
-      max-width: 1000px;
+      max-width: 920px;
       margin: 0 auto;
-      padding: 40px 20px 60px;
+      padding: 60px 20px 100px;
     }
 
     header {
       text-align: center;
-      margin-bottom: 48px;
+      margin-bottom: 60px;
     }
 
     h1 {
-      font-size: 2.1rem;
+      font-size: 2.4rem;
       font-weight: 700;
-      margin: 0 0 8px;
-      color: #0f172a;
+      margin: 0 0 12px;
+      color: #60a5fa;
+      text-shadow: 0 2px 10px rgba(96, 165, 250, 0.3);
     }
 
     .update {
-      font-size: 1.05rem;
-      color: #64748b;
-    }
-
-    .duty-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(460px, 1fr));
-      gap: 24px;
-    }
-
-    .duty-card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-      overflow: hidden;
-      transition: all 0.15s ease;
-    }
-
-    .duty-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 12px 28px rgba(0,0,0,0.12);
-    }
-
-    .card-header {
-      background: #3b82f6;
-      color: white;
-      padding: 14px 20px;
-      font-size: 1.25rem;
-      font-weight: 600;
-    }
-
-    .duty-content {
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 16px;
-    }
-
-    .duty-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 24px;
-      align-items: stretch;
-    }
-
-    .person {
-      flex: 1;
-      min-width: 200px;
-      padding: 16px;
-      background: #f8fafc;
-      border-radius: 8px;
-      border: 1px solid #e2e8f0;
-    }
-
-    .person.primary {
-      border-color: #3b82f6;
-      background: #eff6ff;
-    }
-
-    .role {
-      font-size: 0.95rem;
-      font-weight: 600;
-      color: #475569;
-      margin-bottom: 6px;
-    }
-
-    .name {
-      font-size: 1.15rem;
-      font-weight: 700;
-      color: #0f172a;
-      margin-bottom: 4px;
-    }
-
-    .phone {
       font-size: 1.1rem;
-      font-family: monospace;
-      color: #1e40af;
+      color: #94a3b8;
       letter-spacing: 0.5px;
     }
 
-    @media (max-width: 680px) {
-      .duty-grid {
-        grid-template-columns: 1fr;
-      }
-      .duty-row {
-        flex-direction: column;
-        gap: 16px;
-      }
+    .duty-list {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+    }
+
+    .duty-group {
+      background: rgba(30, 41, 59, 0.7);
+      border-radius: 16px;
+      border: 1px solid rgba(96, 165, 250, 0.25);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4),
+                  inset 0 0 20px rgba(96, 165, 250, 0.08);
+      overflow: hidden;
+      backdrop-filter: blur(8px);
+      transition: all 0.25s ease;
+    }
+
+    .duty-group:hover {
+      transform: translateY(-6px);
+      border-color: rgba(96, 165, 250, 0.5);
+      box-shadow: 0 16px 48px rgba(0, 0, 0, 0.5),
+                  inset 0 0 30px rgba(96, 165, 250, 0.12);
+    }
+
+    .group-title {
+      background: linear-gradient(to right, #3b82f6, #60a5fa);
+      padding: 18px 28px;
+      font-size: 1.45rem;
+      font-weight: 600;
+      color: white;
+      letter-spacing: 0.5px;
+    }
+
+    .group-content {
+      padding: 28px 32px;
+      display: flex;
+      justify-content: space-between;
+      gap: 32px;
+      flex-wrap: wrap;
+    }
+
+    .person-box {
+      flex: 1;
+      min-width: 320px;
+      padding: 20px;
+      background: rgba(15, 23, 42, 0.5);
+      border-radius: 12px;
+      border: 1px solid rgba(96, 165, 250, 0.2);
+    }
+
+    .person-box.primary {
+      background: rgba(30, 58, 138, 0.35);
+      border-color: #60a5fa;
+    }
+
+    .role-label {
+      font-size: 1rem;
+      font-weight: 500;
+      color: #94a3b8;
+      margin-bottom: 8px;
+    }
+
+    .name {
+      font-size: 1.35rem;
+      font-weight: 700;
+      color: #f1f5f9;
+      margin-bottom: 6px;
+    }
+
+    .phone {
+      font-size: 1.3rem;
+      font-family: 'Consolas', 'Courier New', monospace;
+      color: #93c5fd;
+      letter-spacing: 1px;
+      font-weight: 500;
+    }
+
+    @media (max-width: 800px) {
+      .container { padding: 40px 16px 80px; }
+      h1 { font-size: 2rem; }
+      .group-title { font-size: 1.3rem; padding: 16px 24px; }
+      .group-content { flex-direction: column; gap: 24px; }
+      .person-box { min-width: auto; }
     }
   </style>
 </head>
@@ -132,7 +133,7 @@
       <div class="update">最后更新：<span id="update-time"></span></div>
     </header>
 
-    <div class="duty-grid" id="groups"></div>
+    <div class="duty-list" id="groups"></div>
   </div>
 
   <script>
@@ -144,35 +145,32 @@
         const container = document.getElementById('groups');
 
         data.groups.forEach(group => {
-          const card = document.createElement('div');
-          card.className = 'duty-card';
+          const groupEl = document.createElement('div');
+          groupEl.className = 'duty-group';
 
-          card.innerHTML = `
-            <div class="card-header">${group.name} 值班人员</div>
-            <div class="duty-content">
-              <div class="duty-row">
-                <div class="person primary">
-                  <div class="role">主值班</div>
-                  <div class="name">${group.primary.name}</div>
-                  <div class="phone">${group.primary.phone}</div>
-                </div>
-
-                <div class="person">
-                  <div class="role">辅值班</div>
-                  <div class="name">${group.secondary.name}</div>
-                  <div class="phone">${group.secondary.phone}</div>
-                </div>
+          groupEl.innerHTML = `
+            <div class="group-title">${group.name} 值班人员</div>
+            <div class="group-content">
+              <div class="person-box primary">
+                <div class="role-label">主值班</div>
+                <div class="name">${group.primary.name}</div>
+                <div class="phone">${group.primary.phone}</div>
+              </div>
+              <div class="person-box">
+                <div class="role-label">辅值班</div>
+                <div class="name">${group.secondary.name}</div>
+                <div class="phone">${group.secondary.phone}</div>
               </div>
             </div>
           `;
 
-          container.appendChild(card);
+          container.appendChild(groupEl);
         });
       })
       .catch(err => {
         console.error(err);
         document.getElementById('groups').innerHTML = 
-          '<p style="text-align:center; color:#dc2626; font-size:1.2rem; padding:40px;">数据加载失败，请检查 data.json 文件</p>';
+          '<div style="text-align:center; color:#f87171; font-size:1.3rem; padding:60px 0;">数据加载失败，请检查 data.json</div>';
       });
   </script>
 
