--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
       background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
       color: #e2e8f0;
       min-height: 100vh;
     }
 
     .container {
-      max-width: 920px;
-      margin: 0 auto;
-      padding: 60px 20px 100px;
+      padding: 60px 4% 100px;   /* 左右留 4% 左右的边距，适中不贴边 */
     }
 
     header {
@@ -26,11 +24,11 @@
     }
 
     h1 {
-      font-size: 2.4rem;
+      font-size: clamp(1.8rem, 5vw, 3rem);  /* 自适应字体大小 */
       font-weight: 700;
       margin: 0 0 12px;
       color: #60a5fa;
-      text-shadow: 0 2px 10px rgba(96, 165, 250, 0.3);
+      text-shadow: 0 2px 12px rgba(96, 165, 250, 0.4);
     }
 
     .update {
@@ -42,86 +40,94 @@
     .duty-list {
       display: flex;
       flex-direction: column;
-      gap: 40px;
+      gap: 48px;
     }
 
     .duty-group {
-      background: rgba(30, 41, 59, 0.7);
+      background: rgba(30, 41, 59, 0.75);
       border-radius: 16px;
-      border: 1px solid rgba(96, 165, 250, 0.25);
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4),
-                  inset 0 0 20px rgba(96, 165, 250, 0.08);
+      border: 1px solid rgba(96, 165, 250, 0.3);
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5),
+                  inset 0 0 25px rgba(96, 165, 250, 0.1);
       overflow: hidden;
-      backdrop-filter: blur(8px);
+      backdrop-filter: blur(10px);
       transition: all 0.25s ease;
     }
 
     .duty-group:hover {
-      transform: translateY(-6px);
-      border-color: rgba(96, 165, 250, 0.5);
-      box-shadow: 0 16px 48px rgba(0, 0, 0, 0.5),
-                  inset 0 0 30px rgba(96, 165, 250, 0.12);
+      transform: translateY(-8px);
+      border-color: rgba(96, 165, 250, 0.6);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.6),
+                  inset 0 0 35px rgba(96, 165, 250, 0.15);
     }
 
     .group-title {
       background: linear-gradient(to right, #3b82f6, #60a5fa);
-      padding: 18px 28px;
-      font-size: 1.45rem;
+      padding: 20px 32px;
+      font-size: clamp(1.3rem, 3vw, 1.6rem);
       font-weight: 600;
       color: white;
-      letter-spacing: 0.5px;
+      letter-spacing: 0.8px;
     }
 
     .group-content {
-      padding: 28px 32px;
+      padding: 32px 4% 40px;  /* 内部左右留白 */
       display: flex;
       justify-content: space-between;
-      gap: 32px;
+      gap: 40px;
       flex-wrap: wrap;
     }
 
     .person-box {
       flex: 1;
       min-width: 320px;
-      padding: 20px;
-      background: rgba(15, 23, 42, 0.5);
+      padding: 24px;
+      background: rgba(15, 23, 42, 0.6);
       border-radius: 12px;
-      border: 1px solid rgba(96, 165, 250, 0.2);
+      border: 1px solid rgba(96, 165, 250, 0.25);
+      transition: all 0.2s ease;
+    }
+
+    .person-box:hover {
+      background: rgba(30, 58, 138, 0.4);
+      border-color: #93c5fd;
     }
 
     .person-box.primary {
-      background: rgba(30, 58, 138, 0.35);
+      background: rgba(30, 58, 138, 0.45);
       border-color: #60a5fa;
     }
 
     .role-label {
-      font-size: 1rem;
+      font-size: 1.05rem;
       font-weight: 500;
       color: #94a3b8;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
 
     .name {
-      font-size: 1.35rem;
+      font-size: clamp(1.2rem, 3vw, 1.5rem);
       font-weight: 700;
       color: #f1f5f9;
-      margin-bottom: 6px;
+      margin-bottom: 8px;
     }
 
     .phone {
-      font-size: 1.3rem;
-      font-family: 'Consolas', 'Courier New', monospace;
+      font-size: clamp(1.15rem, 3vw, 1.4rem);
+      font-family: 'Consolas', monospace;
       color: #93c5fd;
-      letter-spacing: 1px;
+      letter-spacing: 1.2px;
       font-weight: 500;
     }
 
-    @media (max-width: 800px) {
-      .container { padding: 40px 16px 80px; }
-      h1 { font-size: 2rem; }
-      .group-title { font-size: 1.3rem; padding: 16px 24px; }
-      .group-content { flex-direction: column; gap: 24px; }
-      .person-box { min-width: auto; }
+    @media (max-width: 900px) {
+      .group-content {
+        flex-direction: column;
+        gap: 28px;
+      }
+      .container {
+        padding: 50px 5% 80px;
+      }
     }
   </style>
 </head>
@@ -170,7 +176,7 @@
       .catch(err => {
         console.error(err);
         document.getElementById('groups').innerHTML = 
-          '<div style="text-align:center; color:#f87171; font-size:1.3rem; padding:60px 0;">数据加载失败，请检查 data.json</div>';
+          '<div style="text-align:center; color:#f87171; font-size:1.4rem; padding:80px 0;">数据加载失败，请检查 data.json</div>';
       });
   </script>
 
