--- a/index.html
+++ b/index.html
@@ -9,55 +9,54 @@
       margin: 0;
       padding: 0;
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
-      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
-      color: #e2e8f0;
+      background: #ffffff;               /* 纯白色背景 */
+      color: #1e293b;
       min-height: 100vh;
     }
 
     .container {
-      padding: 40px 4% 60px;   /* 上下 padding 减小，左右 4% 保持铺满感 */
+      padding: 40px 4% 60px;             /* 左右留白适中，铺满感 */
     }
 
     header {
       text-align: center;
-      margin-bottom: 40px;     /* 标题区高度压缩 */
+      margin-bottom: 40px;
     }
 
     h1 {
       font-size: 2.2rem;
       font-weight: 700;
       margin: 0 0 8px;
-      color: #60a5fa;
-      text-shadow: 0 2px 8px rgba(96, 165, 250, 0.3);
+      color: #1e40af;                    /* 深蓝标题 */
     }
 
     .update {
       font-size: 1rem;
-      color: #94a3b8;
+      color: #64748b;
     }
 
     .duty-list {
       display: flex;
       flex-direction: column;
-      gap: 32px;               /* 分组间距减小 */
+      gap: 32px;
     }
 
     .duty-group {
-      background: rgba(30, 41, 59, 0.8);
+      background: #ffffff;
       border-radius: 12px;
-      border: 1px solid rgba(96, 165, 250, 0.35);
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.45);
+      border: 1px solid #e2e8f0;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
       overflow: hidden;
       transition: all 0.2s ease;
     }
 
     .duty-group:hover {
-      border-color: #60a5fa;
-      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.55);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+      border-color: #3b82f6;
     }
 
     .group-title {
-      background: linear-gradient(to right, #3b82f6, #60a5fa);
+      background: #3b82f6;               /* 蓝色标题栏 */
       padding: 14px 24px;
       font-size: 1.35rem;
       font-weight: 600;
@@ -67,42 +66,42 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      background: rgba(15, 23, 42, 0.6);
+      background: #ffffff;
     }
 
     th, td {
       padding: 14px 20px;
       text-align: left;
-      border-bottom: 1px solid rgba(96, 165, 250, 0.2);
+      border-bottom: 1px solid #e2e8f0;
     }
 
     th {
-      background: rgba(30, 58, 138, 0.5);
-      color: #93c5fd;
+      background: #f1f5f9;
+      color: #334155;
       font-weight: 600;
       font-size: 1rem;
     }
 
     td.role {
       width: 120px;
-      color: #cbd5e1;
+      color: #475569;
       font-weight: 500;
     }
 
     td.name {
       font-weight: 600;
-      color: #f1f5f9;
+      color: #0f172a;
     }
 
     td.phone {
       font-family: 'Consolas', monospace;
-      color: #93c5fd;
+      color: #1e40af;
       font-size: 1.05rem;
       letter-spacing: 0.8px;
     }
 
     tr:hover {
-      background: rgba(59, 130, 246, 0.15);
+      background: #eff6ff;
     }
 
     @media (max-width: 768px) {
@@ -168,7 +167,7 @@
       .catch(err => {
         console.error(err);
         document.getElementById('groups').innerHTML = 
-          '<p style="text-align:center; color:#f87171; font-size:1.3rem; padding:40px 0;">数据加载失败，请检查 data.json</p>';
+          '<p style="text-align:center; color:#ef4444; font-size:1.3rem; padding:40px 0;">数据加载失败，请检查 data.json</p>';
       });
   </script>
 
